<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <!-- TextView with default styles -->
    <TextView
        android:text="@string/hello_world1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />

    <!-- TextView with styles in attributes -->
    <TextView
        android:text="@string/hello_world2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#0000FF"
        android:textSize="15dp"
        android:typeface="monospace"
        android:id="@+id/textView2"
        android:layout_below="@id/textView"/>

    <!-- TextView with styles from resources -->
    <TextView
        android:text="@string/hello_world3"
        android:layout_below="@id/textView2"
        style="@style/MyFontStyle"
        android:id="@+id/textView3" />

    <!-- Button with default styles -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button1"
        android:id="@+id/button"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true" />

    <!-- Button with styles from resources -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button2"
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        android:layout_alignParentStart="true"
        style="@style/MyButtonStyle" />


</RelativeLayout>
